Fix background picture not showing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("background.jpg");
+    background-image: url("../background.jpg");
     font-family: 'Chalkduster', Courier, monospace;
     color: white;
     font-size: 24px;
